# DeepGaurd

./: .env.example  .gitignore  README.md  REPORT.md  app.py  pyproject.toml  requirements.txt  test_all_images.py  test_all_videos.py
.github/workflows/: ci.yml
.streamlit/: config.toml
deepguard/: __init__.py  cli.py  config.py  ensemble.py
deepguard/apis/: __init__.py  huggingface.py  sightengine.py
deepguard/detectors/: __init__.py  audio_detector.py  ela_detector.py  image_detector.py  metadata_detector.py  video_detector.py
deepguard/utils/: __init__.py  file_utils.py  report.py  video_utils.py
tests/: test_audio.py  test_image.py  test_video.py
